# sqlx-model

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
sqlx-model-macros/: Cargo.toml
sqlx-model-macros/src/: lib.rs
sqlx-model-tools/: Cargo.toml  README.md  d2c_config.toml
sqlx-model-tools/src/: common.rs  lib.rs  main.rs  mysql.rs
src/: executer_option.rs  lib.rs  macros.rs  sql_bind.rs  sql_quote.rs
src/curd/: delete.rs  insert.rs  macros.rs  mod.rs  select.rs  update.rs
tests/: common.rs  test.rs
tests/curd/: delete.rs  insert.rs  mod.rs  select.rs  transaction.rs  update.rs
tests/curd_mysql/: common.rs  delete.rs  insert.rs  mod.rs  select.rs  transaction.rs  update.rs
tests/curd_pgsql/: common.rs  delete.rs  insert.rs  mod.rs  select.rs  transaction.rs  update.rs
