[workspace]

[package]
name = "sqlx-model-demo"
version = "0.0.1-beta.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"
license-file = "../../LICENSE"
description="sqlx model demo"
[dependencies]
sqlx-model = { version = "~0.0.1-beta.13", path = "../../",default-features = false,features = ["sqlx-mysql"] }
sqlx = {version = "~0.5",features = [ "mysql","offline","runtime-async-std-native-tls"] }
async-std={version = "1.10.0", features = [ "attributes" ]}